# wgpu-n-body

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: compute.wgsl  draw.wgsl  inits.rs  lib.rs  main.rs  runners.rs  shader.wgsl
src/runners/: draw.wgsl  mod.rs  offline_headless.rs  online_renderer.rs
src/sims/: mod.rs  naive.rs  tree.rs
src/sims/shaders/: naive.wgsl  tree.wgsl
src/utils/: coordinated_pool.rs  mod.rs  octree.rs  slice_alloc.rs
