[package]
name = "wgpu-n-body"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.26"
glam = "0.20"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
rand = "0.8.4"
rayon = "1.5.1"
parking_lot = "0.11"
jemallocator = "0.3.2"
bumpalo = { version = "3.9.1", features = [ "collections" ] }
bumpalo-herd = "0.1.1"
crossbeam-channel = "*"
crossbeam-utils = "*"
cgmath = "0.18"

[dev-dependencies]
criterion = "0.3"
jemallocator = "0.3.2"

[[bench]]
name = "benchmark"
harness = false
